[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-lens"
version = "1.0.0"
description = "Credit risk scoring and loan default prediction API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Reflective Lantern", email = "devneatharva@gmail.com"},
]
keywords = ["credit-risk", "machine-learning", "fastapi", "loan-default"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
loan-lens = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
