[metadata]
name = loan-lens
version = 1.0.0
description = Credit risk scoring and loan default prediction API
long_description = file: README.md
long_description_content_type = text/markdown
author = Reflective Lantern
author_email = devneatharva@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = credit-risk machine-learning fastapi loan-default

[options]
packages = find:
python_requires = >=3.11

[options.entry_points]
console_scripts =
    loan-lens = app.main:app

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
